--- a/src/components/Bubble/styles.css
+++ b/src/components/Bubble/styles.css
@@ -11,7 +11,7 @@
   justify-content: center;
   padding: 5px;
   border: 0;
-  border-radius: 100%;
+  border-radius: var(--border-radius-circle);
   transition: .3s;
   z-index: 99;
 }
