--- a/src/main.css
+++ b/src/main.css
@@ -6,7 +6,7 @@
 :root {
   /* Color Variables */
   --persian-blue: #1F37C0;
-  --klein-blue: #011BB6;
+  --klein-blue: #001BB8;
   --navy: #020D77;
   --deep-cove: #07074E;
   --sapphire: #08084C;
@@ -64,12 +64,14 @@
   --small-strong-font: 500 1em 'Rubik', sans-serif;
   --small-regular-font: 400 1em 'Rubik', sans-serif;
   --small-thin-font: 100 1em 'Rubik', sans-serif;
+  --medium-regular-font: 400 1.15em 'Source Sans Pro', sans-serif;
+  --large-strong-font: 500 1.25em 'Rubik', sans-serif;
+
   --h1-font: 500 2.25em 'Rubik', sans-serif;
-  --h2-font: 100 1.2em 'Rubik', sans-serif;
-  --h3-font: 500 2.15em 'Rubik', sans-serif;
+  --h2-font: 500 2.15em 'Rubik', sans-serif;
+  --h3-font: 100 1.2em 'Rubik', sans-serif;
   --h4-title-font: 500 1.5em 'Rubik', sans-serif;
   --h4-sub-font: 400 1.3em 'Source Sans Pro', sans-serif;
-  --p-font: 400 1.15em 'Source Sans Pro', sans-serif;
 
   /* Other */
   --dim-filter: 95%;
@@ -170,7 +172,7 @@ body {
 .Button:hover,
 .ButtonAlt:hover,
 .ButtonAltColored:hover {
-  filter: brightness(var(--button-dim-filter));
+  filter: brightness(var(--dim-filter));
 }
 
 .LinkBtn {
