chore: create 'how it works' component

--- a/src/components/Products/styles.css
+++ b/src/components/Products/styles.css
@@ -17,6 +17,7 @@
   align-items: center;
   justify-content: center;
   gap: var(--gap-x-large);
+  border-bottom: 1px solid var(--mischka);
 }
 
 .Products>.Product {
