--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -26,7 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  transition: .25s;
+  transition: var(--animation-fast);
   z-index: 99;
 }
 
