--- a/src/components/WhyTractian/styles.css
+++ b/src/components/WhyTractian/styles.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  border-bottom: 1px solid var(--mischka);
 }
 
 .WhyTractian>.Heading {
