--- a/src/components/WhyTractian/styles.css
+++ b/src/components/WhyTractian/styles.css
@@ -44,7 +44,7 @@
 
 .WhyTractian>.Container>.Card:hover {
   transform: translateY(-10px);
-  box-shadow: 0 6px 6px 4px var(--shadow-lighter);
+  box-shadow: 0 6px 6px 4px var(--shadow-softer);
 }
 
 .WhyTractian>.Container>.Card>.Title {
