feat: create testimonials slider

--- a/src/main.css
+++ b/src/main.css
@@ -25,8 +25,10 @@
   --link-water: rgb(208, 213, 218);
   --clay: rgb(198, 204, 210);
   --gull-gray: rgb(157, 169, 182);
-  --gunsmoke: rgb(129, 131, 131);
+  --gunsmoke: rgb(129, 129, 129);
+  --scorpion: rgb(90, 90, 90);
   --tundora: rgb(64, 64, 64);
+  --mine-shaft: rgb(36, 36, 36);
   --eerie-black: rgb(28, 28, 28);
   --light: rgba(255, 255, 255, 0.122);
   --light-softer: rgba(255, 255, 255, 0.063);
