--- a/src/components/Testimonials/styles.module.css
+++ b/src/components/Testimonials/styles.module.css
@@ -1,13 +1,176 @@
+@media only screen and (max-width: 600px) {
+  .Wrapper {
+    padding: var(--padding-tb-mobile) .5rem 2rem !important;
+  }
+
+  .Badges {
+    gap: var(--gap-small) !important;
+  }
+
+  .BadgeImageWrapper {
+    height: 100px !important;
+    width: 100px !important;
+  }
+}
+
 .Testimonials {
   background-color: var(--solitude);
   min-height: var(--section-min-height);
-  padding: var(--padding-desktop);
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
 }
 
+/* Wrapper */
+.Wrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  padding: var(--padding-tb-desktop) var(--padding-lr-desktop) 2rem;
+}
+
+/* Wrapper - Badges */
+.Badges {
+  display: flex;
+  gap: var(--gap-medium);
+}
+
+/* Wrapper - Heading */
 .Heading {
   color: var(--sapphire);
   font: var(--h2-font);
+  margin: 35px 0 20px;
+  text-align: center;
+}
+
+/* Slider */
+.Slider {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+/* Slider - Shadows */
+.Slider::before,
+.Slider::after {
+  background: linear-gradient(to right, rgba(249, 251, 252, 1) 0%,rgba(255,255,255,0) 100%);
+  content: "";
+  height: 100%;
+  position: absolute;
+  width: 300px;
+  z-index: 2;
+}
+
+.Slider::after {
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
+}
+
+.Slider::before {
+  left: 0;
+  top: 0;
+}
+
+/* Slider - Track */
+.Track {
+  position: relative;
+  right: 30%;
+  display: flex;
+  height: 350px;
+  margin-bottom: var(--padding-tb-desktop);
+  gap: var(--gap-x-large);
+}
+
+/* Social Proof Card */
+.SocialProof {
+  background-color: var(--white);
+  min-width: 700px;
+  height: 98%;
+  border: 0;
+  border-radius: var(--border-radius);
+  padding: 30px 50px;
+  box-shadow: 0 0.25rem 0.5rem var(--shadow);
+}
+
+/* Social Proof Card - Author */
+.Author {
+  display: flex;
+}
+
+.Info {
+  display: flex;
+  flex-flow: column nowrap;
+  margin-left: 1.15rem;
+}
+
+.Name {
+  color: var(--scorpion);
+  font: 600 1.3em 'Source Sans Pro', sans-serif;
+  margin-bottom: .25rem;
+}
+
+.Role {
+  color: var(--tundora);
+  font: 300 1.3em 'Source Sans Pro', sans-serif;
+}
+
+/* Rating */
+.Rating {
+  margin-top: 20px;
+}
+
+.QuoteContainer {
+  margin-top: 20px;
+}
+
+.Quote {
+  color: var(--mine-shaft);
+  font: 300 1.5em 'Source Sans Pro', sans-serif;
+  line-height: 2.25rem;
+}
+
+/* Slider - Button */
+.Button {
+  cursor: pointer;
+  position: absolute;
+  background: white;
+  border: 0;
+  border-radius: var(--border-radius);
+  height: 3rem;
+  width: 3rem;
+  box-shadow: 0 0.25rem 0.5rem 0 var(--shadow);
+  opacity: .9;
+  bottom: 50%;
+  z-index: 99;
+}
+
+.Button:hover {
+  filter: brightness(var(--dim-filter));
+}
+
+.FloatLeft {
+  left: 2rem;
+}
+
+.FloatRight {
+  right: 2rem;
+}
+
+/* Images */
+.BadgeImageWrapper {
+  height: 120px;
+  width: 120px;
+}
+
+.PersonImageWrapper {
+  height: 60px;
+  width: 60px;
+}
+
+.Image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  overflow: hidden;
 }
